# OpenThoughts-Agent

./: .agents  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  build_support.py  pyproject.toml
agent_logs/: 2026-06-19_cp2_forward_dict_ndim_bug.md  2026-06-20_131k_cp_dcp_r3_config.md  2026-06-20_delphi_rl_hparam_retune.md
baselines/coderforge/: README.md
baselines/sera/: README.md
chat_templates/: delphi_v0_think.jinja2  mistral_agentic.jinja2
data/: commons.py
data/cloud/: launch_tracegen_iris.py
data/generation/: base.py  utils.py
data/local/: run_tracegen.py
data/nemotron_cpp_v2/: generate.py  generate_fast.py  templates.py  transform.py
data/nemotron_gym/: adapter.py  run.py
data/patchers/: patch_codenet_python_tasks.py  patch_exercism_python_tasks.py  patch_exp_rpt_crosscodeeval_csharp_v4_tasks.py  patch_exp_rpt_defects4j_v3_v3_tasks.py  patch_exp_rpt_stack_php_large_v4_tasks.py  patch_exp_rpt_stack_php_v2_v4_tasks.py  patch_exp_rpt_stack_php_v2_v6_tasks.py  patch_freelancer_tasks.py  patch_ghactions_tasks.py  patch_logsmith_tasks.py  patch_methods2test_tasks.py  patch_methods2test_v3_tasks.py  patch_rle_flat25_tasks.py  patch_scaffold_tasks.py  patch_softwareheritage_tasks.py  patch_stack_bash_tasks.py  patch_stack_bash_v3_tasks.py  patch_stack_bash_withtests_tasks.py  patch_stack_csharp_tasks.py  patch_stack_csharp_v3_tasks.py  patch_stack_csharp_v4_tasks.py  patch_stack_csharp_v5_tasks.py  patch_stack_dockerfile_tasks.py  patch_stack_dockerfile_v3_tasks.py  patch_stack_go_tasks.py  patch_stack_go_v3_tasks.py  patch_stack_go_v4_tasks.py  patch_stack_junit_tasks.py  patch_stack_junit_v3_tasks.py  patch_stack_junit_v4_tasks.py  patch_stack_junit_v5_tasks.py  patch_stack_junit_v6_tasks.py  patch_stack_php_v3_tasks.py  patch_stack_pytest_synthetic_tasks.py  patch_stack_pytest_synthetic_v3_tasks.py  patch_stack_pytest_synthetic_v4_tasks.py  patch_stack_ruby_tasks.py  patch_stack_selfdoc_tasks.py  patch_swe_rebench_v2_tasks.py  patch_swegym_tasks.py  (+1 more)
data/sbatches/: register_snapshots.py
data/tmax15k/: __init__.py  generate.py  synthesize_oracle_solvers.py
database/unified_db/: infra_errors.py  utils.py
docker/: Dockerfile.gpu-rl  Dockerfile.tpu  README.gpu-rl-wheelcache.md  build_and_push.sh  build_gpu_rl_kaniko.sh  build_wheels.sh  rl_env_constraints.txt
docker/wheelhouse/: .keep
docs/: EVAL_GUIDE.md  HARBOR_YAML_GROUND_TRUTH.md  PREFERRED_HARNESS_REPRODUCTION.md  README.md  RESUME_HANDOFF.md
eval/: EVAL_GUIDE.md  README.md  baseline_model_configs.yaml  build_vllm_cmd.sh  check_progress.py  check_resume_needed.py  checkin.py  resume_chunked.py  snapshot_download.py  unified_eval_harbor.sbatch  unified_eval_listener.py
eval/cloud/: launch_eval_iris.py
eval/clusters/: example.yaml  jupiter.yaml  leonardo.yaml  tacc.yaml  tacc_baseline_model_configs.yaml  tacc_baseline_model_configs_65k.yaml
eval/configs/: baseline_model_configs_minimal.yaml  dcagent_eval_config.yaml  dcagent_eval_config_aider_agent_nothink.yaml  dcagent_eval_config_mini_swe_agent.yaml  dcagent_eval_config_no_override.yaml  dcagent_eval_config_openhands.yaml  dcagent_eval_config_openhands_qwen3_coder.yaml  dcagent_eval_config_openhands_toolcall.yaml  dcagent_eval_config_swe_agent.yaml  model_configs.yaml  nano_v3_reasoning_parser.py
eval/docs/: PREFERRED_HARNESS_REPRODUCTION.md  RESUME_HANDOFF.md
eval/envs/: README.md  otagent-fix.yml  otagent2-fix.yml
eval/evalchemy/: README.md  delphi_eval.sbatch  evalchemy_eval.sbatch
eval/jupiter/: EVAL_WORKFLOW.md  dcagent_eval_config_2x.yaml  eval_harbor.sbatch  unified_eval_harbor.sbatch  unified_eval_listener.py
eval/leonardo/: dcagent_eval_config.yaml  eval_harbor.sbatch  start_proxy_tunnel.sh  unified_eval_harbor.sbatch
eval/lists/: EXAMPLE.txt  README.md  id_2x_reeval_top2_20260617.txt  qwen35_36_a3b.txt  qwen35_a3b_only.txt  qwen36_a3b_only.txt  reeval_ID_priority_20260628_swebench.txt  reeval_ID_priority_20260628_swebench_leg2.txt  reeval_ID_priority_20260628_tb2.txt  reeval_ID_priority_20260628_v2.txt  seqnorm_tis_shaped_40_8b.txt  to_run.txt
eval/presets/: README.md  __init__.py  aider.yaml  bfcl.yaml  financeagent.yaml  gaia.yaml  medagentbench.yaml  swebench.yaml  swebench_full.yaml  tb2.yaml  v1.yaml  v2.yaml
eval/tacc/: eval_harbor.sbatch
eval/tests/: listener_submit_harness.py  resolve_parity_harness.py  test_model_registry_resolve.py
hpc/: arguments.py  axolotl_config_utils.py  eval_listener_launch_utils.py  harbor_utils.py  hpc.py  iris_fetch_daemon.py  iris_job_registry.py  iris_launch_utils.py  launch.py  launch_utils.py  local_paths.py  local_runner_utils.py  model_mirror_registry.py  ray_utils.py  resume_manager.py  rl_config_utils.py  rl_launch_utils.py  setup_rl_env.sh  sft_launch_utils.py  snapshot_manager.py  vllm_utils.py
hpc/datagen_yaml/: gemma4_31b_runai_v6e8_32k.yaml  gemma4_31b_v5litepod16_131k_g3.yaml  gemma4_31b_v5litepod32_131k_g4.yaml  gemma4_31b_v6e16_131k_e1.yaml  gemma4_31b_v6e16_131k_e2.yaml  gemma4_31b_v6e16_131k_e3.yaml  gemma4_31b_v6e16_131k_e4.yaml  gemma4_31b_v6e8_131k_g1.yaml  gemma4_31b_v6e8_131k_g2.yaml  gemma4_31b_v6e8_131k_g5.yaml  gemma4_31b_v6e8_131k_g6.yaml  gemma4_31b_v6e8_32k_a1.yaml  gemma4_31b_v6e8_32k_a2.yaml  gemma4_31b_v6e8_32k_a3.yaml  gemma4_31b_v6e8_32k_a4.yaml  gemma4_31b_v6e8_32k_a5.yaml  gemma4_31b_v6e8_32k_a6.yaml  gemma4_31b_v6e8_32k_a7.yaml  gemma4_31b_v6e8_32k_a8.yaml  gemma4_31b_v6e8_32k_b1.yaml  gemma4_31b_v6e8_32k_b2.yaml  gemma4_31b_v6e8_32k_c2.yaml  gemma4_31b_v6e8_32k_c3.yaml  gemma4_31b_v6e8_32k_c4.yaml  gemma4_31b_v6e8_32k_c5.yaml  gemma4_31b_v6e8_32k_d1.yaml  gemma4_31b_v6e8_32k_d2.yaml  gemma4_31b_v6e8_32k_d3.yaml  gemma4_31b_v6e8_32k_d4.yaml  glm_47_jupiter_1node_32k_lever2pilot.yaml  glm_47_jupiter_1node_64k_lever2pilot.yaml  glm_47_jupiter_4node_131k.yaml  glm_47_perlmutter_4node_131k.yaml  glm_51_awq_jupiter_2node_32k.yaml  glm_51_awq_jupiter_2node_pp2_tp4_32k.yaml  (+45 more)
model_config/: README.md  __init__.py  _patterns.yaml  resolver.py
prm/: teacher_hint.py
scripts/: generate_eval_registry.py  migrate_eval_registry.py
(+1527 files in other folders)
